--- a/src/hader_footer/header.css
+++ b/src/hader_footer/header.css
@@ -47,7 +47,7 @@ ul {
   font-family: 'Carlito';
   font-style: normal;
   font-weight: 1000;
-  font-size: 1rem;
+  font-size: 40%;
 
   width: auto;
   justify-content: center;
